fixing spacing between widgets in sponsor areas

--- a/wp-content/themes/voiceofoc/css/style.css
+++ b/wp-content/themes/voiceofoc/css/style.css
@@ -798,6 +798,9 @@ h5.widgettitle {
   margin: 0 auto;
   width: 60%;
 }
+.sponsorship-widget-area .widget {
+  margin-bottom: 0px;
+}
 .gform_wrapper.donation_form_wrapper .field_sublabel_above {
   height: auto;
   margin-bottom: 0;
