--- a/wp-content/themes/voiceofoc/less/widgets.less
+++ b/wp-content/themes/voiceofoc/less/widgets.less
@@ -197,3 +197,7 @@ h5.widgettitle {
     width: 60%;
 }
 
+
+.sponsorship-widget-area .widget {
+    margin-bottom: 0px;
+}
